internalization of Home page

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -56,5 +56,10 @@
   "realResidenceAddress": "Real Residence Address",
   "registrationNumber": "Registration Number",
   "model": "Model",
-  
+
+  "@home": {
+    "description": "Home UI : lib/pages/home/home_page.dart"
+  },
+
+  "home": "Home",
 }
