drawer header implmented

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -65,6 +65,12 @@
   },
 
   "home": "Home",
+  "menuTravelHistory": "Travel History",
+  "menuPayment": "Payment",
+  "menuPromoCode": "Promotional codes",
+  "menuSoutient": "Soutient",
+  "menuQuit": "Quit the profil",
+
   "titleBTAddressSelection": "Address Selection",
   "titleBTDetails": "Cost Selection",
   "titleBTPayment": "Payment Methods",
